# esp32s3

helloworld/: CMakeLists.txt  openocd_test.cfg  sdkconfig
helloworld/components/BSP/: CMakeLists.txt
helloworld/components/BSP/24CXX/: 24cxx.c  24cxx.h
helloworld/components/BSP/ESPTIM/: esptim.c  esptim.h
helloworld/components/BSP/EXIT/: exit.c  exit.h
helloworld/components/BSP/GPTIM_NEW/: gptim_new.c  gptim_new.h
helloworld/components/BSP/GPTIM_OLD/: gptim_old.c  gptim_old.h
helloworld/components/BSP/IIC/: iic.c  iic.h  iic_master.c  iic_master.h  soft_iic.c  soft_iic.h
helloworld/components/BSP/KEY/: key.c  key.h
helloworld/components/BSP/LCD/: lcd.c  lcd.h  lcdfont.c  lcdfont.h
helloworld/components/BSP/LED/: led.c  led.h
helloworld/components/BSP/OLED/: oled.c  oled.h  oledfont.h
helloworld/components/BSP/SPI/: spi.c  spi.h
helloworld/components/BSP/SW_HW_PWM/: hw_pwm.c  hw_pwm.h  sw_pwm.c  sw_pwm.h
helloworld/components/BSP/UART/: uart.c  uart.h
helloworld/components/BSP/WDT/: wdt.c  wdt.h
helloworld/components/BSP/XL9555/: xl9555.c  xl9555.h
helloworld/main/: CMakeLists.txt  esp32_chip.c  main.c
led/: sdkconfig  sdkconfig.old
led/main/: CMakeLists.txt  led.c  temp.c
test_event/: CMakeLists.txt
test_event/main/: CMakeLists.txt  test_event.c  test_taskNotify.c
test_queue/: CMakeLists.txt
test_queue/main/: CMakeLists.txt  test_queue.c
test_sem/: CMakeLists.txt
test_sem/main/: CMakeLists.txt  dht11.c  test_sem.c
test_task/: CMakeLists.txt
test_task/main/: CMakeLists.txt  test_task.c
ws2812/main/: led_ws2812.c  main.c
